# mytestcollection

./: .README.md.un~  .gitignore  README.md  README.md~
testcpppython/: readme.txt  testcpppython.sln
testcpppython/testcpppython/: testcpppython.cpp  testcpppython.vcxproj  testcpppython.vcxproj.filters
testcpppython/testcpppython/x64/Debug/: testcpppython.exe.recipe  testcpppython.ilk  vc143.idb
testcpppython/testcpppython/x64/Debug/testcpppython.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testcpppython.lastbuildstate
testdll/: CMakeLists.txt  README.md
testdll/code/: mymulti.cpp
testdll/test/: CMakeLists.txt
testdll/test/src/: main.cpp
testjob/: CMakeLists.txt  README.md
testjob/src/: JobSystem.cpp  JobSystem.hpp  main.cpp
testpybind/: CMakeLists.txt  README.md  setup.py
testpybind/code/: mylib.cpp  mylib.hpp
testpybind/python/: CMakeLists.txt  test.py
testpybind/python/src/: mylibbind.cpp
testpybind/test/: CMakeLists.txt
testpybind/test/src/: main.cpp
testthread/: CMakeLists.txt  README.md
testthread/src/: Async.cpp  Async.h  DispatchQueue.cpp  DispatchQueue.h  main.cpp
vsdebugpython/: readme.txt  vsdebugpython.sln
vsdebugpython/superfastcode/: module.cpp  superfastcode.vcxproj
vsdebugpython/superfastcode/x64/Debug/: superfastcode.ilk  superfastcode.pyd.recipe  superfastcode_d.pyd.recipe  vc143.idb
vsdebugpython/superfastcode/x64/Debug/superfastcode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  superfastcode.lastbuildstate
vsdebugpython/superfastcode/x64/Release/: superfastcode.iobj  superfastcode.ipdb  superfastcode.pyd.recipe
vsdebugpython/superfastcode/x64/Release/superfastcode.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  superfastcode.lastbuildstate
vsdebugpython/vsdebugpython/: vsdebugpython.py  vsdebugpython.pyproj
vsdebugpython/x64/Debug/: superfastcode.exp  superfastcode.lib  superfastcode.pyd  superfastcode_d.pyd
vsdebugpython/x64/Release/: superfastcode.exp  superfastcode.pyd
